# hubstry-iso-code

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE_COMMERCIAL.md  LICENSE_COMMERCIAL_GUIDE.md  README.md  USAGE.md  ci.sh  docker-compose.yml  prefixes.yml  release.sh
.github/workflows/: ci.yml
docs/templates/: dpia_template.md
examples/: advanced_compliance.rs  basic_analysis.rs  eca_age_verify.rs  simple_violation.rs
examples/reports/: sample_report.html
examples/web/: compliant_site.html  non_compliant_site.html
hubstry-iso-code-eca-digital/: Cargo.toml  README.md
hubstry-iso-code-eca-digital/examples/: advanced_compliance.rs  basic_analysis.rs
hubstry-iso-code-eca-digital/src/: lib.rs  models.rs  parser.rs  semantic_engine.rs
hubstry-iso-code-eca-digital/src/rust_engine/: main.rs
hubstry-iso-code-eca-digital/tests/: integration_tests.rs
integrations/: README.md
rules/: eca_digital.yml  lgpd_basic.yml
src/: algorithm.rs  ast.rs  audit.rs  lib.rs  lootbox.rs  main.rs  models.rs  painel.rs  parser.rs  prefix_manager.rs  relato.rs  sdkscan.rs  security.rs  semantic_engine.rs  sos.rs
src/api/: errors.rs  handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs  server.rs
src/jurisdictions/: eca.rs  lgpd.rs  mod.rs
src/licensing/: mod.rs  tier_checker.rs
src/parser/: js_parser.rs  mod.rs  python_parser.rs  rust_parser.rs  tree_sitter_utils.rs
src/report/: html.rs  pdf.rs
src/report/templates/: report_base.html
src/rules/: loader.rs  mod.rs  models.rs
src/rust_engine/: main.rs
src/scanner/: ad_tracker_detector.rs  age_gate_detector.rs  dark_pattern_detector.rs  lootbox_detector.rs  mod.rs  privacy_policy_checker.rs
tests/: integration_tests.rs  test_audit.rs  test_eca_validation.rs  test_report_generation.rs  test_security.rs  test_web_scanner.rs
