
[package]
name = "hubstry_iso_code"
version = "0.1.0"
edition = "2021"
authors = ["Guilherme Gonçalves Machado <guilherme.ceo@hubstry.com>"]
license = "Apache-2.0"
description = "A framework for integrating international compliance, security, quality, and ethical standards directly into the software development workflow."
homepage = "https://github.com/Hubstry/hubstry-iso-code"
repository = "https://github.com/Hubstry/hubstry-iso-code"
keywords = ["compliance", "security", "iso", "framework", "rust"]
categories = ["development-tools", "compilers", "parsing"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# Web scanning
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
scraper = "0.20"
url = "2"
async-trait = "0.1"

# CLI additions
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# Licensing
sha2 = "0.10"
hex = "0.4"

# Add dependencies here as the Rust engine is developed

