
[package]
name = "hubstry-iso-code-eca-digital"
version = "0.1.0"
edition = "2021"
authors = ["Guilherme Gonçalves Machado <guilherme.ceo@hubstry.com>"]
license = "Apache-2.0"
description = "A framework for integrating international compliance, security, quality, and ethical standards directly into the software development workflow."
homepage = "https://github.com/Hubstry/hubstry-iso-code"
repository = "https://github.com/Hubstry/hubstry-iso-code"
keywords = ["compliance", "security", "iso", "framework", "rust"]
categories = ["development-tools", "compilers", "parsing"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
thiserror = "1.0"
# Add dependencies here as the Rust engine is developed
